--- a/.htaccess
+++ b/.htaccess
@@ -26,7 +26,7 @@
     Deny from all
 </FilesMatch>
 
-<FilesMatch "^(executeserver\.py||standalone\.py|static\ config\.py|config_template\.py|terminateserver\.py|testserver\.py|oconfig\.py)$">
+<FilesMatch "^(executeserver\.py|standalone\.py|static\ config\.py|config_template\.py|terminateserver\.py|testserver\.py|oconfig\.py)$">
     Order allow,deny
     Deny from all
 </FilesMatch>
